# fd-organizer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/constants/: __init__.py  constants.py
src/fd_organizer/: cli.py
src/fd_organizer/constants/: __init__.py  constants.py
src/fd_organizer/mapper/: __init__.py  base_mapper.py  json_mapper.py  mapper.py
src/fd_organizer/mixins/: __init__.py  logging_mixin.py
src/fd_organizer/organizer/: Organizer.py  __init__.py
src/mapper/: __init__.py  base_mapper.py  json_mapper.py  mapper.py
src/mixins/: __init__.py  logging_mixin.py
src/organizer/: Organizer.py  __init__.py
