[project]
name = "fd-organizer"
version = "0.1.0"
description = ""
authors = [
    {name = "CRUCIFIED-AM\\alenp",email = "alenpeni.info@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.16.0,<0.17.0)"
]

[tool.poetry]
packages = [
    {include = "constants", from = "src"},
    {include = "fd_organizer", from = "src"},
    {include = "mapper", from = "src"},
    {include = "mixins", from = "src"},
    {include = "organizer", from = "src"},
]

[project.scripts]
fd-organizer = "fd_organizer.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
